# dinov3_juan_experiments

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
output/: eval_config.yaml  segmentation_config.yaml
src/dinov3_lib_juan/datasets/: tudl_bop.py
src/notebooks/: foreground_segmentation.ipynb
src/scripts/: download_weights.sh  run.py  segmentation_config_tudl.yaml  test_dice_loss.py  test_load.py  train_segmentation.py  train_segmentation_model.py
