[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

## Not sure what this is for?.
[tool.setuptools.packages.find]
where = ["src"]
include = ["dinov3_lib_juan"]  

[project]
name = "dinov3_exp_juan"
version = "0.0.0"
dependencies = [
    "rich",
    "click",
    "imageio",
]

requires-python = ">=3.11,<3.13" # Python 3.10 required
authors = [
    {name = "Juan Antonio Barragan", email = "jbarrag3@jh.edu"}
]
maintainers = [ 
    {name = "Juan Antonio Barragan", email = "jbarrag3@jh.edu"}
]
description = """
"""

readme = "README.md"
keywords = [""]
